--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*
 body {
   
   width: 100%;
@@ -16,7 +17,7 @@ body {
 	align-items: center;
 	border: 0.2em solid rgba(128, 179, 255);
 	border-radius: 2em;
-	/*background-color: rgb(179, 209, 255);*/
+	
 	flex-direction: column;
 }
 
@@ -66,3 +67,7 @@ section{
 	width: 100%
 }
 
+.items {
+	position: relative;
+}
+/*
