--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,6 +1,7 @@
 
 .items {
 	position: relative;
+	margin-left: 23%;
 }
 
 
@@ -9,6 +10,7 @@
 */
 .carousel {
 	position: relative;
+	overflow: hidden;
 
 }
 
@@ -38,7 +40,7 @@ transform: translate3d(0, 0, 0);
 	border-radius: 50%;
 	top: 50%;
 	margin-top: -20px;
-	right: 0px;
+	right: 7px;
 	box-shadow: 0 15px 35px #3232321a,0 5px 15px #0000001a;
 	cursor: pointer;
 	transition: transform 0.3s;
@@ -51,5 +53,9 @@ transform: translate3d(0, 0, 0);
 .carousel__prev {
 	background-image: url(../img/prev.png);
 	right: auto;
-	left: -20px;
+	left: 7px;
+}
+
+.carousel__item:hover{
+	transform: scale(1.1)
 }
