--- a/css/style.css
+++ b/css/style.css
@@ -1,73 +1,46 @@
-/*
 body {
-  
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: Arial, sans-serif;
-  font-size: 100%;
-
- 
-}
-
-.center_bloc{
-	width: 70%;
+	background-color: #000000;
+	margin: 0 auto;
 	display: flex;
-	align-items: center;
-	border: 0.2em solid rgba(128, 179, 255);
-	border-radius: 2em;
-	
 	flex-direction: column;
-}
-
-
-header{
-	display: flex;
-	justify-content: space-between;
-	width: 100%;
-
-}
-
-#logo{
-	width: 30%;
-	color: rgb(128, 179, 255);
-	margin-left: 10%;
+	align-items: center;
 	
+
 }
 
-nav{
-	display: inline-flex;
+
+header {
+	display: flex;
+	justify-content: space-around;
 	width: 70%;
 }
 
-nav ol {
-	display: inline-flex;
+#nav a {
+    color: rgb(229, 9, 20);
+} 
+
+section {
+	padding-top: 5%;
+	width: 70%;
+	align-items: center;
+}
+
+
+
+h1 {
+    color: rgb(229, 9, 20);
+} 
+
+
+#action, #commedie, #dramatique, #meilleur_film {
 	width: 100%;
-	justify-content: flex-end;
-
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
-
-nav ol li {
-	margin-right: 10%;
-	list-style-type: none;
-}
-
 
 h2{
-	display: center;
-	color: rgb(128, 179, 255);
-	text-align: center;
+	
+	color: rgb(229, 9, 20);	
+	
 }
-
-section{
-	display: flex;
-	flex-direction: column;
-	background-color: rgb(70, 255, 51);
-	width: 100%
-}
-
-.items {
-	position: relative;
-}
-/*
