--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,8 @@ h1 {
 	margin-bottom: 30px;
 }
 
-#action, #commedie, #dramatique, #meilleur_film {
+#meilleur_film, #action, #drama, #animation {
+	
 	width: 100%;
 	display: flex;
 	flex-direction: column;
