--- a/css/modal.css
+++ b/css/modal.css
@@ -1,4 +1,6 @@
 #modal {
+	display: none;
+	visibility: hidden;
 	background-color: rgba(0, 0, 0, 0.8);
 	position: fixed;
 	top:0;
@@ -8,36 +10,33 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	
-
 }
+
 
 #modal-wrapper {
 	overflow: auto;
-    width: 600px;
-    max-width: calc(100vw -20px);
-    max-height: calc(100vh -20px);
+	width: 600px;
+	max-width: calc(100vw -20px);
+	max-height: calc(100vh -20px);
 	background-color: rgb(141, 151, 140 );
-
+	margin: auto;
 }
-
-
-#modal_img {
-	float: left;
-	top: 20px;
-	right: 10px;
-	margin-left: 2em;
-	margin-bottom: 4em;
-}
-
 
 #modal_title {
-     top: 7px;
-     display: flex;
-     justify-content: center;
-     position: relative;
+	margin-top: 7px;
+	justify-content: center;
+	
+	
+
+	
 
 }
+#modal_title h2 {
+	justify-content: center;
+	font-size: 2em;
+	margin: auto;
+}
+
 
 #modal_description {
 	width: 80%;
@@ -46,20 +45,33 @@
 	margin-bottom: 2em;
 }
 
-#modal_close img {
+#modal_close {
 	max-width: 5%; 
-    float: right;
-    position: relative;
-    margin-top: -80px;
-    margin-right: 10px;
-	/*
-	position: absolute;
-    top:0em;
-    right: 2em;
-*/
+	float: right;
+	position: relative;
+	top:0.2em;
+	right: 0.2em;
 }
 
-#modal_close img:hover{
-	transform: scale(1.3)
+
+#modall_wrapper, #modal_close:hover{
+	transform: scale(1.1)
 }
 
+#modal_img {
+	position: relative;
+	float: left;
+	top: 7em;
+	right: 10px;
+	margin-left: 2em;
+	margin-bottom: 4em;
+} 
+
+#content_information {
+	clear: both;
+	position: relative;
+    width: 55%;
+	left: 15em;
+	top:-14em;
+	justify-content: left;
+}
